<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/wall"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:id="@+id/logo"

        android:layout_height="150dp"
        android:background="@drawable/qlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/headr"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:text="@string/descriptionName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headr"
        android:text="@string/description"
        android:textSize="18sp"
        android:id="@+id/co"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/copyright"/>



</RelativeLayout>
