<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qalex.companyprofile.ContactUs">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/ln"
            android:background="@color/hint"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/pro"
                android:layout_gravity="center"
                android:src="@drawable/qlogo"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="5dp"
                android:layout_gravity="start"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/hint"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_call"
                    />
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/pink"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/ic_envelope"
                    />
                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/pink"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="@color/pink"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Follow us on"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/hint"
                android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/ic_google"
                />
            <TextView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/pink"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/ic_face"
                    />
                <TextView
                    android:id="@+id/face"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/pink"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/ic_twitter"
                    />
                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/pink"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/ic_linkedin"
                    />
                <TextView
                    android:id="@+id/linkedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedin"
                    android:textSize="15sp"

                    android:layout_gravity="center"
                    android:textColor="@color/pink"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>

    </LinearLayout>

</RelativeLayout>
